# bdlearn

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/bdlearn/: BConvLayer.hpp  BMat.hpp  BMaxPool.hpp  BatchBlas.hpp  BatchData.hpp  BatchNorm.hpp  BufDims.hpp  ConvLayer.hpp  DataSet.hpp  GAP.hpp  Layer.hpp  LossLayer.hpp  MaxPool.hpp  Model.hpp  Pool.hpp  SAMMEEnsemble.hpp  SoftmaxCrossEntropy.hpp  WeightedSoftmaxCrossEntropy.hpp  bdlearn.hpp  darknet_image_loader.h  macros.hpp  utils.hpp
include/schedules/: libbatchcol2imaccum.h  libbatchcol2imaccum.schedule.h  libbatchim2col.h  libbatchim2col.halide_generated.cpp  libbatchim2col.schedule.h  libbatchmatmulabr.h  libbatchmatmulabr.schedule.h
libs/: Halide.h  darknet_image_loader.h  stb_image.h
python/: test_bmat.py
src/: BMat.cpp
src/core/: BConvLayer.cpp  BMat.cpp  BMaxPool.cpp  BatchNorm.cpp  ConvLayer.cpp  GAP.cpp  MaxPool.cpp  Model.cpp  Pool.cpp  SAMMEEnsemble.cpp  utils.cpp
src/python/: py_bindings.cpp
src/schedules/: BatchCol2ImAccum.cpp  BatchIm2Col.cpp  BatchMatMul_ABr.cpp  Makefile  README.md  commands.sh
src/training/: BatchBlas.cpp  DataSet.cpp  SoftmaxCrossEntropy.cpp  WeightedSoftmaxCrossEntropy.cpp  darknet_image_loader.c  darknet_image_loader.cpp  utils.cpp
test/: CMakeLists.txt
test/scripts/: bmat_compare.py  gen_batchnorm_data.py  gen_conv_data.py  gen_softmax_data.py  np_compare.py  to_absolute_path.py
test/src/: BConv_basic.cpp  BConv_basic.hpp  BMat_basic.cpp  BMat_basic.hpp  BatchBlas.cpp  BatchBlas.hpp  BatchBlas_test.cpp  BatchBlas_test.hpp  BatchNorm_basic.cpp  BatchNorm_basic.hpp  CIFAR_test.cpp  CIFAR_test.hpp  DataSet_test.cpp  DataSet_test.hpp  Ensemble_test.cpp  Ensemble_test.hpp  GAP_test.cpp  GAP_test.hpp  Halide_test.cpp  Halide_test.hpp  MNIST_test.cpp  MNIST_test.hpp  MaxPool_test.cpp  MaxPool_test.hpp  Model_test.cpp  Model_test.hpp  Softmax_test.cpp  Softmax_test.hpp  a  main.cpp
test/test_weights/: EnsembleOut.csv  EnsembleTestOut.csv  ModelTest.csv  ModelTestIn.csv
